# Copyright (c) 2016 Intel Corporation. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")
import("//build_overrides/v8.gni")
import("//third_party/icu/config.gni")
import("//xwalk/build/android/generate_android_project.gni")

android_library("xwalk_core_java") {
  deps = [
    ":xwalk_core_java_resources",
    "//xwalk/runtime/android/core_internal:xwalk_core_reflection_layer_gen",
    "//xwalk/third_party/lzma_sdk:lzma_sdk_java",
  ]
  srcjars =
      [ "$root_gen_dir/xwalk_core_reflection_layer/wrapper/wrapper.srcjar" ]
  java_files = [
    "src/org/xwalk/core/extension/BindingObject.java",
    "src/org/xwalk/core/extension/BindingObjectAutoJS.java",
    "src/org/xwalk/core/extension/BindingObjectStore.java",
    "src/org/xwalk/core/extension/EventTarget.java",
    "src/org/xwalk/core/extension/ExtensionInstanceHelper.java",
    "src/org/xwalk/core/extension/JsApi.java",
    "src/org/xwalk/core/extension/JsConstructor.java",
    "src/org/xwalk/core/extension/JsContextInfo.java",
    "src/org/xwalk/core/extension/JsStubGenerator.java",
    "src/org/xwalk/core/extension/MessageHandler.java",
    "src/org/xwalk/core/extension/MessageInfo.java",
    "src/org/xwalk/core/extension/ReflectionHelper.java",
    "src/org/xwalk/core/extension/XWalkCoreExtensionBridge.java",
    "src/org/xwalk/core/extension/XWalkExtensionContextClient.java",
    "src/org/xwalk/core/extension/XWalkExternalExtension.java",
    "src/org/xwalk/core/extension/XWalkExternalExtensionBridge.java",
    "src/org/xwalk/core/extension/XWalkExternalExtensionBridgeFactory.java",
    "src/org/xwalk/core/extension/XWalkExternalExtensionManagerImpl.java",
    "src/org/xwalk/core/JavascriptInterface.java",
    "src/org/xwalk/core/XWalkActivity.java",
    "src/org/xwalk/core/XWalkActivityDelegate.java",
    "src/org/xwalk/core/XWalkApplication.java",
    "src/org/xwalk/core/XWalkEnvironment.java",
    "src/org/xwalk/core/XWalkFileChooser.java",
    "src/org/xwalk/core/XWalkCoreWrapper.java",
    "src/org/xwalk/core/XWalkDialogManager.java",
    "src/org/xwalk/core/XWalkInitializer.java",
    "src/org/xwalk/core/XWalkDecompressor.java",
    "src/org/xwalk/core/XWalkLibraryInterface.java",
    "src/org/xwalk/core/XWalkLibraryLoader.java",
    "src/org/xwalk/core/XWalkMixedResources.java",
    "src/org/xwalk/core/XWalkUpdater.java",
  ]
}

android_resources("xwalk_core_java_resources") {
  resource_dirs = [ "res" ]
  custom_package = "org.xwalk.core"
  deps = [
    ":xwalk_app_strings_grd",
  ]
}

java_strings_grd("xwalk_app_strings_grd") {
  grd_file = "strings/xwalk_app_strings.grd"
  outputs = [
    "values/xwalk_app_strings.xml",
  ]
}

generate_android_project("xwalk_core_library") {
  android_manifest =
      "//xwalk/runtime/android/core_internal_empty/AndroidManifest.xml"
  deps = [
    ":xwalk_core_java",
    "//base:base_java",
    "//third_party/icu:icudata",
    "//xwalk/resources:xwalk_pak",
    "//xwalk/resources:xwalk_resources_100_percent_pak",
    "//xwalk/runtime/android/core_internal:xwalk_core_internal_java",
    "//xwalk/runtime/android/dummy_lib:libxwalkdummy",
    "//xwalk/runtime/app/android:libxwalkcore",
  ]
  binary_files = [
    "$root_out_dir/xwalk.pak",
    "$root_out_dir/xwalk_100_percent.pak",
  ]
  js_bindings = [
    "//xwalk/experimental/launch_screen/launch_screen_api.js",
    "//xwalk/experimental/wifidirect/wifidirect_api.js",
  ]
  native_libs = [
    "$root_out_dir/libxwalkdummy.so",
    "$root_out_dir/libxwalkcore.so",
  ]

  # We only need to exclude those classes because invoker.android_manifest
  # usually points to a manifest with the same package name (org.xwalk.core),
  # leading to the resources being processed again by Ant when building with
  # app-tools and dex complaining of multiple definitions of
  # org.xwalk.core.R.
  # TODO(rakuco): Check if we should fix the manifest instead.
  resource_excluded_patterns = [
    "*/org/xwalk/core/R.class",
    "*/org/xwalk/core/R##*.class",
    "*/org/xwalk/core/library/empty/R.class",
    "*/org/xwalk/core/library/empty/R##*.class",
  ]
  template_dir = "//xwalk/build/android/xwalkcore_library_template"

  if (icu_use_data_file) {
    binary_files += [ "$root_out_dir/icudtl.dat" ]
  }

  if (v8_use_external_startup_data) {
    binary_files += [
      "$root_out_dir/natives_blob.bin",
      "$root_out_dir/snapshot_blob.bin",
    ]
    deps += [ "//v8" ]
  }
}

generate_android_project("xwalk_shared_library") {
  android_manifest =
      "//xwalk/runtime/android/core_internal_empty/AndroidManifest.xml"
  deps = [
    ":xwalk_core_java",
    "//xwalk/resources:xwalk_pak",
    "//xwalk/resources:xwalk_resources_100_percent_pak",
  ]
  js_bindings = [
    "//xwalk/experimental/launch_screen/launch_screen_api.js",
    "//xwalk/experimental/wifidirect/wifidirect_api.js",
  ]

  # We only need to exclude those classes because invoker.android_manifest
  # usually points to a manifest with the same package name (org.xwalk.core),
  # leading to the resources being processed again by Ant when building with
  # app-tools and dex complaining of multiple definitions of
  # org.xwalk.core.R.
  # TODO(rakuco): Check if we should fix the manifest instead.
  resource_excluded_patterns = [
    "*/org/xwalk/core/R.class",
    "*/org/xwalk/core/R##*.class",
    "*/org/xwalk/core/library/empty/R.class",
    "*/org/xwalk/core/library/empty/R##*.class",
  ]
  template_dir = "//xwalk/build/android/xwalk_shared_library_template"
}
